--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jerryIsHere"
+    "url": "https://github.com/jerryIsHere/babygraph"
   },
   "author": "",
   "license": "ISC"
